--- a/shweb/templates/admin/base.html
+++ b/shweb/templates/admin/base.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href="/static/css/admin/style.css">
     {% endblock %}
     {% block title %}
-    <title>станет хуже</title>
+    <title>станет хуже admin</title>
     <meta name="title" content="станет хуже: admin">
     {% endblock %}
     {% block scripts %}
