--- a/shweb/static/css/admin/edit_home.css
+++ b/shweb/static/css/admin/edit_home.css
@@ -79,7 +79,7 @@ input[type=file]{
     overflow-y: auto;
 }
 
-.file-upload {
+.file-action {
     height: 20px;
     cursor:pointer;
     display: flex;
@@ -93,7 +93,7 @@ input[type=file]{
 }
 
 
-.file-upload img {
+.file-action img {
     height: 100%;
 }
 
@@ -123,6 +123,7 @@ input[type=file]{
 
 .controls {
     display: flex;
+    gap: 10px;
     justify-content: space-between;
     width: 100%;
     height: 200px;
@@ -150,4 +151,27 @@ input[type=file]{
 .index-control-button:hover {
     background-color: rgba(124, 124, 124, 0.856);
     cursor: pointer;
+}
+
+.template-control-buttons {
+    width: 25%;
+}
+
+#download-template {
+    display: none;
+}
+
+#frame-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.info {
+    width: 100%;
+    gap:10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
