--- a/shweb/templates/not_found.html
+++ b/shweb/templates/not_found.html
@@ -4,5 +4,5 @@
 <link rel='stylesheet' href="/static/css/not_found.css">
 {% endblock %}
 {% block content %}
-<div class="page-error"> 404 Page not found :( </div>
+<div class="page-error"> {{message}} </div>
 {% endblock %}
