--- a/shweb/templates/admin/index.html
+++ b/shweb/templates/admin/index.html
@@ -35,7 +35,7 @@
 </div>
 
 <a href="/admin/release?action=new" class="release-new">
-    <button class="release-new-btn">add song</button>
+    <button class="release-new-btn">add release</button>
 </a>
 <a href="/admin/index-edit" class="index-edit">
     <button class="index-edit-btn">edit home page</button>
