--- a/shweb/services/rest/templates/release.html
+++ b/shweb/services/rest/templates/release.html
@@ -23,7 +23,7 @@
         style="max-width: 700px; background-image: url({{config.AWS_CLOUD_FRONT_DOMAIN}}/releases/{{release.release_id}}/cover.jpg); background-size: contain;">
         <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 100%;">
             <iframe
-                src="https://bandcamp.com/EmbeddedPlayer/{{release.bandcamp_id}}/size=large/bgcol=000000/linkcol=ffffff/tracklist=true/transparent=true/"
+                src="https://bandcamp.com/EmbeddedPlayer/{{release.bandcamp_type}}/size=large/bgcol=000000/linkcol=ffffff/tracklist=true/transparent=true/"
                 style="border: 0; top: 0; left: 0; width: 100%; height: 100%; position: absolute;" allowfullscreen
                 scrolling="no" allow="encrypted-media"></iframe>
         </div>
