--- a/shweb/services/rest/templates/release.html
+++ b/shweb/services/rest/templates/release.html
@@ -8,7 +8,7 @@
 <meta name="title" content="станет хуже - {{release.release_name}}">
 <meta property="og:title" content="станет хуже - {{release.release_name}}">
 <meta name="twitter:title" content="станет хуже - {{release.release_name}}">
-<meta name="description" content="{{release.type}}, {{release.date}}">
+<meta name="description" content="{{release.release_type}}, {{release.release_date}}">
 <meta property="og:description" content="{{release.type}}, {{release.date}}">
 <meta name="twitter:description" content="{{release.type}}, {{release.date}}">
 <meta name="image" content="{{config.AWS_CLOUD_FRONT_DOMAIN}}/releases/{{release.release_id}}/og.jpg">
