--- a/shweb/services/rest/templates/release.html
+++ b/shweb/services/rest/templates/release.html
@@ -9,8 +9,8 @@
 <meta property="og:title" content="станет хуже - {{release.release_name}}">
 <meta name="twitter:title" content="станет хуже - {{release.release_name}}">
 <meta name="description" content="{{release.release_type}}, {{release.release_date}}">
-<meta property="og:description" content="{{release.type}}, {{release.date}}">
-<meta name="twitter:description" content="{{release.type}}, {{release.date}}">
+<meta property="og:description" content="{{release.release_type}}, {{release.release_date}}">
+<meta name="twitter:description" content="{{release.release_type}}, {{release.release_date}}">
 <meta name="image" content="{{config.AWS_CLOUD_FRONT_DOMAIN}}/releases/{{release.release_id}}/og.jpg">
 <meta property="og:image" content="{{config.AWS_CLOUD_FRONT_DOMAIN}}/releases/{{release.release_id}}/og.jpg">
 <meta name="twitter:image" content="{{config.AWS_CLOUD_FRONT_DOMAIN}}/releases/{{release.release_id}}/og.jpg">
@@ -23,7 +23,7 @@
         style="max-width: 700px; background-image: url({{config.AWS_CLOUD_FRONT_DOMAIN}}/releases/{{release.release_id}}/cover.jpg); background-size: contain;">
         <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 100%;">
             <iframe
-                src="https://bandcamp.com/EmbeddedPlayer/{{release.bandcamp_type}}/size=large/bgcol=000000/linkcol=ffffff/tracklist=true/transparent=true/"
+                src="https://bandcamp.com/EmbeddedPlayer/{{release.bandcamp_id}}/size=large/bgcol=000000/linkcol=ffffff/tracklist=true/transparent=true/"
                 style="border: 0; top: 0; left: 0; width: 100%; height: 100%; position: absolute;" allowfullscreen
                 scrolling="no" allow="encrypted-media"></iframe>
         </div>
@@ -93,15 +93,15 @@
     <ul class="tracklist">
         {% for track in release.tracklist%}
         <div class="lyrics-dropdown">
-            <button onclick="openLyrics('{{ track.id }}')" class="lyrics-btn">
+            <button onclick="openLyrics('{{ track.track_id }}')" class="lyrics-btn">
                 {{loop.index}}. {{ track.name }}
                 {% if track.explicit %}
                 <span class="explicit"> <img class="explicit-icon" src="/static/images/icons/explicit.svg"> </span>
                 {%endif %}
                 <span class="expand"> <img class="expand-icon" src="/static/images/icons/expand.svg"
-                        id="{{ track.id }}-expand-icon"> </span>
+                        id="{{ track.track_id }}-expand-icon"> </span>
             </button>
-            <div id={{ track.id }} class="lyrics">
+            <div id={{ track.track_id }} class="lyrics">
                 <pre>{{track.lyrics}}</pre>
             </div>
         </div>
