--- a/shweb/services/rest/templates/public/mobile/release.html
+++ b/shweb/services/rest/templates/public/mobile/release.html
@@ -1,4 +1,4 @@
-{% extends "mobile/base.html" %}
+{% extends "public/mobile/base.html" %}
 {% block head %}
 {{ super() }}
 <link rel='stylesheet' href="/static/css/mobile/release.css">
