--- a/shweb/services/rest/templates/public/web/release.html
+++ b/shweb/services/rest/templates/public/web/release.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "public/web/base.html" %}
 {% block head %}
 {{ super() }}
 <link rel='stylesheet' href="/static/css/release.css">
