--- a/shweb/services/rest/templates/public/web/error.html
+++ b/shweb/services/rest/templates/public/web/error.html
@@ -1,7 +1,7 @@
-{% extends "mobile/base.html" %}
+{% extends "public/web/base.html" %}
 {% block head %}
 {{ super() }}
-<link rel='stylesheet' href="/static/css/mobile/not_found.css">
+<link rel='stylesheet' href="/static/css/not_found.css">
 {% endblock %}
 {% block content %}
 <div class="page-error"> {{message}} </div>
