--- a/shweb/services/rest/templates/public/mobile/release.html
+++ b/shweb/services/rest/templates/public/mobile/release.html
@@ -8,9 +8,9 @@
 <meta name="title" content="станет хуже - {{release.release_name}}">
 <meta property="og:title" content="станет хуже - {{release.release_name}}">
 <meta name="twitter:title" content="станет хуже - {{release.release_name}}">
-<meta name="description" content="{{release.type}}, {{release.date}}">
-<meta property="og:description" content="{{release.type}}, {{release.date}}">
-<meta name="twitter:description" content="{{release.type}}, {{release.date}}">
+<meta name="description" content="{{release.release_type}}, {{release.release_date}}">
+<meta property="og:description" content="{{release.release_type}}, {{release.release_date}}">
+<meta name="twitter:description" content="{{release.release_type}}, {{release.release_date}}">
 <meta name="image" content="{{config.AWS_CLOUD_FRONT_DOMAIN}}/releases/{{release.release_id}}/og.jpg">
 <meta property="og:image" content="{{config.AWS_CLOUD_FRONT_DOMAIN}}/releases/{{release.release_id}}/og.jpg">
 <meta name="twitter:image" content="{{config.AWS_CLOUD_FRONT_DOMAIN}}/releases/{{release.release_id}}/og.jpg">
@@ -37,20 +37,20 @@
             </button>
         </span>
     </div>
-    <div class="date">{{_('Release date')}}: {{release.date}} </div>
+    <div class="date">{{_('Release date')}}: {{release.release_date}} </div>
     <div class="tracklist-head">{{_('Tracklist')}}:</div>
     <ul class="tracklist">
         {% for track in release.tracklist%}
         <div class="lyrics-dropdown">
-            <button onclick="openLyrics('{{ track.id }}')" class="lyrics-btn">
+            <button onclick="openLyrics('{{ track.track_id }}')" class="lyrics-btn">
                 {{loop.index}}. {{ track.name }}
                 {% if track.explicit %}
                 <span class="explicit"> <img class="explicit-icon" src="/static/images/icons/explicit.svg"> </span>
                 {%endif %}
                 <span class="expand"> <img class="expand-icon" src="/static/images/icons/expand.svg"
-                        id="{{ track.id }}-expand-icon"> </span>
+                        id="{{ track.track_id }}-expand-icon"> </span>
             </button>
-            <div id={{ track.id }} class="lyrics">
+            <div id={{ track.track_id }} class="lyrics">
                 <!-- <pre><b>Lyrics:</b> {{track.written}}</pre> -->
                 <pre>{{track.lyrics}}</pre>
             </div>
@@ -86,5 +86,5 @@
 {% endblock %}
 
 {% block loaded_scripts %}
-<script src="/static/scripts/mobile/release.js"></script>
+<script src="/static/scripts/public/mobile/release.js"></script>
 {% endblock %}
