get_release_list refactor

--- a/shweb/services/rest/templates/admin/base.html
+++ b/shweb/services/rest/templates/admin/base.html
@@ -41,6 +41,6 @@
         <div class="content">{% block content %}{% endblock %}</div>
     </div>
 
-    <script src="/static/scripts/base.js"></script>
+    <script src="/static/scripts/public/web/base.js"></script>
     {% block loaded_scripts %}{% endblock %}
 </body>
