--- a/shweb/services/rest/templates/public/web/base.html
+++ b/shweb/services/rest/templates/public/web/base.html
@@ -102,6 +102,6 @@
         </div>
     </footer>
 
-    <script src="/static/scripts/base.js"></script>
+    <script src="/static/scripts/public/web/base.js"></script>
     {% block loaded_scripts %}{% endblock %}
 </body>
