--- a/shweb/services/rest/templates/public/mobile/base.html
+++ b/shweb/services/rest/templates/public/mobile/base.html
@@ -45,7 +45,7 @@
             <ul class="menu">
                 <div class="menu-nav">
                     <li><a class="nav-link" href="/{{session['lang_arg']}}">{{_('home')}}</a></li>
-                    <li><a class="nav-link" href="/feed{{session['lang_arg']}}">{{_('feed')}}</a></li>
+                    <li><a class="nav-link" href="/feed/{{session['lang_arg']}}">{{_('feed')}}</a></li>
                     <li>
                         <div class="nav-div" id="discogs"> {{_('discogs')}} <span class="expand"> <img
                                     class="expand-icon" src="/static/images/icons/expand.svg" id="release-expand-icon">
