--- a/shweb/services/rest/templates/public/web/base.html
+++ b/shweb/services/rest/templates/public/web/base.html
@@ -35,7 +35,7 @@
             {% endblock %}
             <div class="navbar">
                 <a href="/{{session['lang_arg']}}" class="nav-link">{{_('home')}}</a>
-                <a href="/feed{{session['lang_arg']}}" class="nav-link">{{_('feed')}}</a>
+                <a href="/feed/{{session['lang_arg']}}" class="nav-link">{{_('feed')}}</a>
                 <div class="dropdown">
                     <button class="dropbtn">{{_('discogs')}}</button>
                     <div class="dropdown-content">
