remove www from share link

--- a/shweb/services/rest/templates/public/web/release.html
+++ b/shweb/services/rest/templates/public/web/release.html
@@ -63,7 +63,7 @@
                 </button>
                 <div class="share-dropdown">
                     <a class="share-link" target="popup"
-                        onclick="copyToClipboard('https://www.stanethuzhe.ru/releases/{{release.release_id}}')">
+                        onclick="copyToClipboard('https://stanethuzhe.ru/releases/{{release.release_id}}')">
                         <img src="/static/images/icons/link.svg" title="Copy link"
                             style="height: 30px; margin-right: -5px;" />
                     </a>
