pink mobile style

--- a/shweb/services/rest/static/css/mobile/style.css
+++ b/shweb/services/rest/static/css/mobile/style.css
@@ -30,8 +30,7 @@ body {
 
 * {
     font-family: "Comfortaa";
-    color:rgb(255, 255, 255)
-    /* color: #e8c8c8; */
+    color: #cea3a3;
 }
 
 .filter-pink {
